--- a/src/components/Tickets/Tickets.css
+++ b/src/components/Tickets/Tickets.css
@@ -13,11 +13,3 @@
   margin: 2%;
   max-width: 70%;
 }
-
-/* @media screen and (min-width: 768px) {
-    .tickets-content > img{
-        max-width: 20%;
-    }
-}
-    
-} */
